2001-12-19  Glynn Foster  <glynn.foster@sun.com>

	* main.c, menu.c, panel-applet-frame.c, panel-gconf.c,
	* panel-gconf.h, session.c, session.h:

	Move the get and set methods for the profiles to session where 
	they probably belong. Start saving the panel config per profile.
	It's like totally buggy right now, but it's sort of getting there.
	Panels crash because of lack of schema.

2001-12-19  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add panel-main.h.

	* panel-main.h: new file.

	* main.c: (panel_main_get_current_profile): impl.
	  make panel_profile_name static.

	* panel-applet-frame.c: (panel_applet_frame_construct): append
	the prefs_key item to the iid to make the moniker.

	* menu.c: (create_new_panel): use panel_main_get_current_profile.

	* session.c: (session_init_panels): ditto.

2001-12-19  Glynn Foster  <glynn.foster@sun.com>

	* aligned-widget.c, aligned-widget.h, applet-object.c, applet-widget.c,
	* basep-widget.c, basep-widget.h, border-widget.c, border-widget.h,
	* drawer-widget.c, drawer-widget.h, edge-widget.c, edge-widget.h,
	* floating-widget.c, floating-widget.h, foobar-widget.c, menu.c,
	* panel-config.c, panel-config.h, panel-gconf.c, panel-gconf.h,
	* panel-global-config.schemas, panel-per-panel-config.schemas, panel-util.c,
	* panel-util.h, panel-widget.c, panel-widget.h, panel.c,
	* session.c, sliding-widget.c, sliding-widget.h:

	Mindless hacking. If you can have color, I can have stretch.
	Cleaned up some of the gconf panel loading.

2001-12-18  Havoc Pennington  <hp@pobox.com>

	* basep-widget.c (basep_widget_realize): remove
	xstuff_set_wmspec_state_hints

	* xstuff.c (xstuff_window_raise_on_current_wspace): this was all a
	bunch of bullshit, it should just be gtk_window_present()
	(xstuff_set_wmspec_state_hints): I don't think we should do this, 
	because the semantic type is adequate. should only set this kind
	of thing if we are trying to override semantic type