@@ -1,5 +1,10 @@
 2001-12-19  Glynn Foster  <glynn.foster@sun.com>
 
+	* session.c: Saving is fucked. Patch to at least have 
+	a non-b0rked panel.
+
+2001-12-19  Glynn Foster  <glynn.foster@sun.com>
+
 	* main.c, menu.c, panel-applet-frame.c, panel-gconf.c,
 	* panel-gconf.h, session.c, session.h:
 
